<resources>
    <string name="app_name">App-GastoDeViagem</string>
    <string name="distância">distancia</string>
    <string name="total_km">total de quilômetros</string>
    <string name="price">Preço por Litro</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KM por Litro</string>
    <string name="total">TOTAL</string>
    <string name="gasto_total">Gasto total:</string>
    <string name="valor_total">R$ </string>
</resources>